Modified logo and favicon

--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,13 @@ url: ""
 
 # About Settings
 author: Gabriel Ian Escober Abel
-author-img: me.png 
+blog: dev dump logs
+blog-img: logo.png
 about: >
   Relevance. </br> 
   Depth. </br>
   ........... Random
+author: Gabriel Ian E. Abel
 social-twitter: _IanEscober
 social-github: IanEscober
 social-linkedin: IanEscober
