--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "jekyll-gulp-sass-autoprefixer-imagemin-browsersync",
+  "name": "dev-dump-logs",
   "version": "1.0.0",
-  "description": "A starter project for Jekyll",
+  "description": "Relevance. Depth. Random",
   "main": "index.js",
-  "repository": "https://github.com/artemsheludko/Jekyll-Gulp-Sass-Autoprefixer-Imagemin-BrowserSync",
-  "author": "Artem Sheludko",
+  "repository": "https://github.com/IanEscober/ianescober.github.io",
+  "author": "Gabriel Ian E. Abel",
   "license": "MIT",
   "dependencies": {
     "browser-sync": "^2.18.13",
