Updated Sidebar, Logo, and Favicons

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: 'https://ianescober.github.io'
 
 author: Gabriel Ian E. Abel
 
-avatar: /assets/img/sample/avatar.jpg
+avatar: /assets/img/logo.png
 
 github:
   username: ianescober
