--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Gabriel Ian E. Abel",
   "license": "MIT",
   "scripts": {
-    "start": "run.sh"
+    "start": "run.sh",
+    "init": "init.sh"
   }
 }
