Rebranded blog name and updated icons

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
 
-title: Dev Dump Logs
+title: Dump Logs
 
 description: 'Relevance. Depth. ...........Random'
 
